[gd_scene load_steps=62 format=2]

[ext_resource path="res://Jogo/quest 2 - assets/Blue Witch Player/B_witch_idle.png" type="Texture" id=1]
[ext_resource path="res://Jogo/quest 2 - assets/Blue Witch Player/B_witch_run.png" type="Texture" id=2]
[ext_resource path="res://Jogo/JogoMemoria/Bruxinha.gd" type="Script" id=3]
[ext_resource path="res://Jogo/quest 2 - assets/Blue Witch Player/B_witch_attack.png" type="Texture" id=4]
[ext_resource path="res://Jogo/quest 2 - assets/Blue Witch Player/B_witch_take_damage.png" type="Texture" id=5]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Hit2.wav" type="AudioStream" id=6]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Hit1.wav" type="AudioStream" id=7]
[ext_resource path="res://Jogo/quest 2 - assets/Blue Witch Player/B_witch_death.png" type="Texture" id=8]
[ext_resource path="res://Jogo/quest 2 - assets/sons/Dead.wav" type="AudioStream" id=9]
[ext_resource path="res://Jogo/quest 2 - assets/sons/BruxinhaHurt.wav" type="AudioStream" id=10]
[ext_resource path="res://Jogo/quest 2 - assets/sons/map.wav" type="AudioStream" id=11]
[ext_resource path="res://Jogo/JogoMemoria/AtivacaoCarta.gd" type="Script" id=12]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport2.tres" type="Texture" id=13]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport1.tres" type="Texture" id=14]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport6.tres" type="Texture" id=15]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport4.tres" type="Texture" id=16]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport5.tres" type="Texture" id=17]
[ext_resource path="res://Jogo/JogoMemoria/AssetsMemoria/teleport3.tres" type="Texture" id=18]
[ext_resource path="res://Jogo/JogoMemoria/Sons/warp.wav" type="AudioStream" id=19]
[ext_resource path="res://Jogo/JogoMemoria/Sons/warp_out.wav" type="AudioStream" id=20]

[sub_resource type="CapsuleShape2D" id=1]
height = 11.6461

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 104, 46 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 0, 46, 104, 46 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 92, 104, 46 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 0, 138, 104, 46 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 0, 184, 104, 46 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 0, 230, 104, 46 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 0, 276, 104, 46 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 0, 322, 104, 46 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 0, 368, 104, 46 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 8 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 8 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 8 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 8 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 8 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 8 )
region = Rect2( 0, 288, 32, 32 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 8 )
region = Rect2( 0, 320, 32, 32 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 8 )
region = Rect2( 0, 352, 32, 32 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 8 )
region = Rect2( 0, 384, 32, 32 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 8 )
region = Rect2( 0, 416, 32, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 8 )
region = Rect2( 0, 448, 32, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 5 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 5 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 1 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 48 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 48, 32, 48 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 0, 96, 32, 48 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 0, 144, 32, 48 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 2 )
region = Rect2( 0, 192, 32, 48 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 2 )
region = Rect2( 0, 240, 32, 48 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 2 )
region = Rect2( 0, 288, 32, 48 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 2 )
region = Rect2( 0, 336, 32, 48 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ) ],
"loop": true,
"name": "Attack",
"speed": 10.0
}, {
"frames": [ SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Dead",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 18 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "Teleport",
"speed": 10.0
}, {
"frames": [ SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "Walking",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 18 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 15 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": false,
"name": "TeleportBackwards",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=41]
radius = 5.0

[node name="Bruxinha" type="KinematicBody2D"]
collision_mask = 6
script = ExtResource( 3 )

[node name="ColisaoBruxinha" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="SpriteBruxinha" type="AnimatedSprite" parent="."]
frames = SubResource( 40 )
animation = "Idle"
frame = 1
playing = true

[node name="AreaBruxinha2D" type="Area2D" parent="."]

[node name="ColisaoBruxinha2D" type="CollisionShape2D" parent="AreaBruxinha2D"]
shape = SubResource( 1 )

[node name="AtivacaoCarta" type="KinematicBody2D" parent="."]
collision_mask = 0
script = ExtResource( 12 )

[node name="ColisaoAtivacao" type="CollisionShape2D" parent="AtivacaoCarta"]
shape = SubResource( 41 )

[node name="Hit1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Hit2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Dead" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="Hurt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="ItemGot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="DialogueBoxPosition" type="Position2D" parent="."]
position = Vector2( -28.9005, -11.5622 )

[node name="WarpIn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 19 )

[node name="WarpOut" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="animation_finished" from="SpriteBruxinha" to="." method="_on_SpriteBruxinha_animation_finished"]
